update sample size calculation, 2021-11-25, in progress

--- a/.gitignore
+++ b/.gitignore
@@ -1,22 +1,10 @@
-*.doc
-*.doc#
-*.docx
-*.docx#
-*.jpg
-*.pdf
-*.pptx
-*.rda
-*.rds
-*.token
-*.txz
-*.xls
-*.xls#
-*.xlsx
-*.xlsx#
-*.zip
-*dev.R
-*_sessionInfo_*.txt
+data/*
+data-raw/*
+documents/*
+misc/*
+results/*
+sessions/*
 .Rhistory
 heures_555.csv
-data-raw/*.csv
-sessions/
+!*/.keep
+!*.txt
