--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,5 @@
-data/*
-data-raw/*
-documents/*
-misc/*
-results/*
-sessions/*
-.Rhistory
-heures_555.csv
-!*/.keep
-!*.txt
+/*
+/*/
+!.gitignore
+!/R/
+/R/old/
